--- a/style.css
+++ b/style.css
@@ -1,25 +1,40 @@
+*{
+    margin: 0;
+}
 body{
     font-family: "Nunito", sans-serif;
     background-color: #141C32;
     transition: .5s;
+    width: 100%;
+    height: 1800px;
 }
 
 #logo{
     width: 141px;
     height: 83px;   
+    padding-left: 40px;
+    padding-top: 20px;
 }
 header{
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 0 auto ;
+   /* background-color: #5BE9B9;*/
 
 }
 #sociais{
-width:20px;
-height:20px;
+width:70px;
+height:70px;
 border-radius: 5px;
 }
+#sociais{
+    position: relative;
+    display: flex;
+    top: 150px;
+    right: 110px;
+    gap: 5px;
+    }
 ul{
     list-style: none;
 }
@@ -35,7 +50,8 @@ a {
     text-decoration: none;
     color: white;
 }
-.hello{color: white;}
+.hello{color: white; width: 140px; padding-left: 40px;}
+#nav{padding-right: 50px;}
 #entre{
     color: white;
  list-style-type: none;
@@ -44,13 +60,11 @@ a {
 #entre ul{list-style-type: none;}
 #entre{
 border: solid#5BE9B9;
-width: 10%;
 border-radius: 5px;
-}
-#sociais{
-position: relative;
+justify-items: center;
 
 }
+
 
 .y a:hover {
     border-bottom: 2px solid #5BE9B9;
@@ -62,18 +76,25 @@ position: relative;
     border-radius: 10px;
 }
 main{
-    display: flex;
+    display: grid;
+    grid-template-rows: 50% 50%;
+    grid-template-columns: 50% 50%;
+    height: 820px;
+
 }
+
 .navColumn{
-    position: relative;
-    width: 30px;
-    height: 30px;
+  justify-self: left;
+    width: 20px;
+    height: 20px;
 }
 .trilho{
     width: 90px;
     height: 40px;
     background-color: #4d4d4d;
-border-radius: 150px;
+    border-radius: 150px;
+    justify-self: right;
+
 }
 .trilho .indicador{
     width: 40px;
@@ -90,3 +111,29 @@ background-color: #ffffff;
 }
 .trilho.dark{background-color: #c3c3c3;}
 body.dark{background-color: #E4F0F7;}
+
+/*olhar como faz slide overlay*/
+
+/*botão melhor para mudar de tema  (css)
+.darkmode {
+			position: fixed;
+			bottom:1rem;
+			left:1rem;
+			font-size:1.75rem;
+			padding:1rem;
+			margin:1px;
+			border-radius:100%;
+			border-color:var(--accent) !important;
+			box-shadow:0 0 1rem -.25rem var(--accent), inset 0 0 1rem -.75rem var(--accent);
+			color:var(--accent);
+			cursor: pointer;
+			transition:.25s -.05s;
+			&:hover {
+				box-shadow:0 0 1rem -.25rem var(--accent), inset 0 0 1rem -.25rem var(--accent);
+				//background:var(--background);
+			}
+		}
+        
+        código js
+
+        */
