--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ main{
     height: 20px;
     position: fixed;
     padding-left: 50%;
+    padding-bottom: 50px;
 
 }
 .trilho{
@@ -106,6 +107,7 @@ main{
     background-color: #4d4d4d;
     border-radius: 150px;
     justify-self: right;
+    position: relative;
 }
 .trilho .indicador{
     width: 40px;
@@ -117,7 +119,10 @@ cursor: pointer;
 position: absolute;
 
 }
-.trilho.dark .indicador{left: 30px;
+.trilho.dark .indicador{
+    transition: .3s;
+    }
+.trilho.dark .indicador{left: 50px;
 background-color: #ffffff;
 }
 .trilho.dark{background-color: #c3c3c3;}
@@ -147,5 +152,4 @@ body.dark{background-color: #E4F0F7;}
         
         código js
         */
-
-/*Olhar como faz pagination*/
+        /*olhar site page piling.js*/
