--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
 transition: .3s;
+    scroll-behavior: smooth;
 }
 body{
     font-family: "Nunito", sans-serif;
@@ -40,17 +41,27 @@ border-radius: 5px;
     width: 17%;
     height: 17%;
     }
-    #sociais :hover{
+    #sociais /*#rede_cor01*/ :hover{
         fill: #E4F0F7;
     }
+    /*#sociais #rede_cor02 :hover{
+        fill: #0275B3;
+    }
+    #sociais #rede_cor03 :hover{
+        fill: #53CE60;
+    }
+    #sociais #rede_cor04 :hover{
+        fill: #EA498F;
+    }*/
 ul{
     list-style: none;
+    position: fixed;
 }
 ul li {
     display: inline-block;
 }
 ul li {
-    padding: 10px 30px ;
+    padding: 10px 30px;
     text-decoration: none;
     color: white;
 }
@@ -64,11 +75,11 @@ a {
      padding-top: 20%;
      row-gap: 5px; 
     text-align:initial; 
-    row-gap: 50px;
+    
 }
 #nav{padding-right: 50px;
     padding-top: 50px;
-    padding-left: 65%;
+    padding-left: 60%;
 justify-items: center;}
 #entre{
     color: white;
@@ -103,21 +114,23 @@ main{
     height: 20px;
     position: fixed;
     padding-top: 30%;
+    right: 5%;
 
 }
+
 .trilho{
-    width: 90px;
-    height: 40px;
+    width: 70px;
+    height: 30px;
     background-color: #4d4d4d;
     border-radius: 150px;
     justify-self: right;
     position: relative;
-    left: 870px;
-    bottom: 450px;
+    left: 90%;
+    bottom: 400px;
 }
 .trilho .indicador{
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     background-color: #000000;
 border-radius: 50%;
 transform: scale(.9);
@@ -130,7 +143,7 @@ position: absolute;
 .trilho.dark .indicador{
     transition: .3s;
     }
-.trilho.dark .indicador{left: 50px;
+.trilho.dark .indicador{left: 40px;
 background-color: #ffffff;
 }
 .trilho.dark{background-color: #c3c3c3;}
@@ -161,3 +174,4 @@ body.dark{background-color: #E4F0F7;}
         código js
         */
         /*olhar site page piling.js*/
+        .seo_pg2{}
